# semsimula-paper

./: .gitattributes  CITATION.bib  LICENSE  README.md  pyproject.toml  requirements.txt
companion_notes/: Addendum_Non_Autonomous_Fields_For_Appendix_A.md  Advancing_The_Dynamic_Simulation_Model.md  Causal_Leak_Empirical_Comparison_Report.md  Causal_Leak_in_SPLM_Integrate_Bug_and_Fix.md  Conservative_by_Construction_Language_Models.md  Considered_Non-Autonomous_Conservative_Mechanisms.md  Determining_optimal_gamma_for_SPLM.md  E4_damping_sweep_pre-registered_protocol.md  E4_sweep_results_and_discussion.md  Energetic_Minima_Alternatives.md  Evidence_for_second_order_ODE_governing_evolution.md  Expressivity_Bounds_For_v0_Simulator.md  GitHub_Markdown_LaTeX_Rendering_Cheatsheet.md  HSPLM_Path_Forward_and_Experiments.md  Helmholtz-HSPLM_Path_Forward_and_Experiments.md  MCS_Reduction_For_v3_Composite.md  Next_Model_Experiments_for_SPLM.md  On_Gumbel_softmax_sparsity_applied_to_V_phi.md  On_Modeling_Semantic_Energy_Field_into_SPLM.md  On_The_Existence_of_Acceleration_in_Semantic_Structures.md  On_The_Smoothness_of_Scaled_Dot_Product_Attention.md  On_Training_the_PARF_Force.md  On_the_Interpretation_of_Hidden_State.md  On_the_Interpretation_of_Semantic_Mass.md  On_the_MLP_Layer_modeling_pairwise_potential.md  P-rot-6_transformer_dynamics.md  PARF-SPLM_Path_Forward_and_Experiments.md  PARF_Augmented_SPLM_Architecture.md  Reducing_Information_Bottleneck_In_Multi-Channel_Xi_SPLM.md  Replacing_The_Conservative_Mechanism_of_SPLM_with_First_Order.md  Restructuring_paper_v3_after_causal_leak_bug.md  SPLM-1_ablation_pre-registered_protocol.md  SPLM_Experiments.docx  SPLM_inference_efficiency_pre-registered_protocol.md  SPLM_inference_first_order_pre-registered_protocol.md  STP_Loss_Is_An_Emergent_Property_Of_The_Energy_Landscape_Defined_By_Gaussian_Well_Potential.md  Scalar_Potential_based_Helmholtz_Architecture.md  Section_15_24_PARF_Augmented_SPLM_v4_draft.docx  Semantic_Attractor_Extraction.md  Semantic_Simulator_EOM.md  (+10 more)
manuscripts/: Constructing_Langrangian_for_Semantic_Space.docx  Execution_Of_Semantic_Structures.docx  Modeling_Attractive_and_Repulsive_Forces_between_Semantic_Structures.docx  Modeling_Attractive_and_Repulsive_Forces_in_Semantic_Properties.docx  On_Gaussian_Inverse_Semantic_Energy_Well.docx  On_The_Need_of_Dynamic_Simulation_when_Modeling_Interactions_of_Semantic_Structures.docx  PROVENANCE.md  Semantic_Simulation.docx  (+2 more)
(+733 files in other folders)
